# Proyecto-III

./: CMakeLists.txt  estado_bloques.py  generate_proto.sh  main.cpp  main_respaldo.txt  tecmfs_gui.py
.cache/clangd/index/: ControllerClient.cpp.2AEB5EDE11442F5A.idx  ControllerClient.h.7AD8C53B481C2937.idx  Logger.cpp.892F1AB5CDA4C541.idx  Logger.h.EA98C9DCFD173671.idx  MetadataManager.cpp.590FC5C81B33D86F.idx  MetadataManager.h.94E357653322B57C.idx  RAID5Manager.cpp.58AEE8E5C1D9687F.idx  RAID5Manager.h.A224908A2A3BC973.idx  controller_client.cpp.EC8CE2F44BAD961E.idx  disk_server.cpp.8C9294071A683A35.idx  main.cpp.F4DF8F9DB33EDA10.idx  tecmfs.grpc.pb.cc.EDBB429777FA82EE.idx  tecmfs.grpc.pb.h.E331519B229A841B.idx  tecmfs.pb.cc.081F05894C3A5BA3.idx  tecmfs.pb.h.20173B0DB5D03F21.idx
common/protos/: tecmfs.proto
controller/: controller_client.cpp
controller/client/: ControllerClient.cpp  ControllerClient.h
controller/raid/: RAID5Manager.cpp  RAID5Manager.h
controller/utils/: Logger.cpp  Logger.h  MetadataManager.cpp  MetadataManager.h
disk_node/: config.xml  disk_server.cpp
disk_node_1/: config.xml
disk_node_2/: config.xml
disk_node_3/: config.xml
disk_node_4/: config.xml
docs/: Comandos.txt  config().xml
venv_gui/: pyvenv.cfg
